--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "Dinuka De Silba",
   "license": "ISC",
   "devDependencies": {
-    "grunt": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-connect": "*",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-less": "*",
-    "grunt-contrib-qunit": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-less": "^1.2.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-html2json": "git://github.com/Dinuka2013513/grunt-html2json.git",
+    "grunt-json": "^0.2.0"
   }
 }
