--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "qunit": "^1.22.0"
   },
   "dependencies": {
-    "jquery-simulate": "^1.0.1"
+    "jquery-simulate": "^1.0.1",
+    "bootstrap": "^3.3.6"
   }
 }
