--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-handlebars": "^1.0.0",
