--- a/.jshintrc
+++ b/.jshintrc
@@ -30,6 +30,7 @@
     "htmlTempl": true,
     "module": true,
     "Handlebars": true,
-    "jqUnit": true
+    "jqUnit": true,
+    "d3": true
   }
 }
