--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "qunit": "^1.22.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "d3": "^3.5.17"
   }
 }
