--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.6",
     "d3": "^3.5.17",
     "ace-builds": "^1.2.3",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "jquery-simulate-ext": "^1.3.0"
   }
 }
