--- a/bower.json
+++ b/bower.json
@@ -25,8 +25,6 @@
     "ace-builds": "^1.2.3",
     "font-awesome": "^4.6.3",
     "jquery-simulate-ext": "^1.3.0",
-    "bootstrap-material-design": "^0.5.10",
-    "angular": "^1.5.8",
-    "angular-route": "^1.5.8"
+    "bootstrap-material-design": "^0.5.10"
   }
 }
