--- a/bower.json
+++ b/bower.json
@@ -17,13 +17,11 @@
   ],
   "devDependencies": {
     "jquery": "^2.2.1",
-    "qunit": "^1.22.0"
+    "qunit": "^1.22.0",
+    "jquery-simulate-ext": "^1.3.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.6",
     "d3": "^3.5.17",
-    "ace-builds": "^1.2.3",
-    "font-awesome": "^4.6.3",
-    "jquery-simulate-ext": "^1.3.0"
+    "ace-builds": "^1.2.3"
   }
 }
