GH-112:  Moved dev dependencies so that the post install script can run from a package that depends on this one.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Dinuka De Silba",
   "license": "ISC",
   "repository": "https://github.com/dinukadesilva/music-ctrls/",
-  "devDependencies": {
+  "dependencies": {
     "grunt": "1.0.1",
     "grunt-cli": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
@@ -19,10 +19,12 @@
     "grunt-contrib-handlebars": "1.0.0",
     "grunt-contrib-jshint": "1.0.0",
     "grunt-contrib-less": "1.2.0",
-    "grunt-contrib-qunit": "1.2.0",
     "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-html2json": "git://github.com/Dinuka2013513/grunt-html2json.git",
     "grunt-json": "0.2.0"
+  },
+  "devDependencies": {
+    "grunt-contrib-qunit": "1.2.0"
   }
 }
